--- a/style.css
+++ b/style.css
@@ -23,15 +23,6 @@ img {
 html {
  box-sizing: border-box;
 }
-/*%display {
- display: flex;
- align-items: center;
-}*/
-h1 {
- font-size: 0.5em;
- margin: 10px;
-}
-
 .flip-card {
   float: left;
   margin: 20px;
@@ -216,4 +207,149 @@ h1 {
   font-size: 15px;
   font-weight: 300;
   color: grey!important;
+}
+
+.carousel {
+  width: 100%;
+  overflow-x: scroll;
+  padding: 0px;
+  padding-top: 0px;
+  margin-top: 0px!important;
+  position: relative;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.carousel__container {
+  white-space: nowrap;
+  margin: 70px 0px;
+  padding-bottom: 50px;
+  display: inline-block;
+}
+.categories__title {
+ color: rgb(77, 55, 102);
+  font-size: 28px;
+  position: absolute;
+  padding-left: 30px;
+}
+.carousel-item {
+  width: 200px;
+  height: 250px;
+  border-radius: 20px;
+  background-color: #95bcd6;
+  overflow: hidden;
+  margin-right: 10px;
+  margin-top: 70px;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-transition: 1000ms all;
+  transition: 1000ms all;
+  -webkit-transform-origin: center left;
+  transform-origin: center left;
+  position: relative;
+}
+.carousel-item:hover ~ .carousel-item {
+  -webkit-transform: translate3d(100px, 0, 0);
+  transform: translate3d(100px, 0, 0);
+}
+.carousel__container:hover .carousel-item {
+  opacity: 0.3;
+}
+.carousel__container:hover .carousel-item:hover {
+  -webkit-transform: scale(1.5);
+  transform: scale(1.5);
+  opacity: 1;
+}
+.carousel-item__img {
+  width: 200px;
+  height: 250px;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.carousel-item__details {
+  background: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    from(rgba(0, 0, 0, 0.9)),
+    to(rgba(0, 0, 0, 0))
+  );
+  background: linear-gradient(
+    to top,
+    rgba(0, 0, 0, 0.9) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+  font-size: 10px;
+  opacity: 0;
+  -webkit-transition: 450ms opacity;
+  transition: 450ms opacity;
+  padding: 10px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.carousel-item__details:hover {
+  opacity: 1;
+}
+.carousel-item__details span {
+  /* width: 10px;
+  height: 10px; */
+  font-size: 0.9rem;
+  color: #2ecc71;
+  /* background-color: white; */
+}
+.carousel-item__details .controls {
+  padding-top: 180px;
+}
+.carousel-item__details .carousel-item__details--title,
+.carousel-item__details--subtitle {
+  color: #fff;
+  margin: 5px 0;
+}
+.carousel-item__details--title, .carousel-item__details--subtitle {
+  /*text-decoration: none;*/
+  color: #fff;
+  :visited {
+    color: #fff;
+  :hover {
+    color: #099;
+  }
+}
+.noline {
+  text-decoration: none!important;
+  :hover {
+    text-decoration: none;
+  }
+  :visited {
+    text-decoration: none;
+  }
+}
+.quizform {
+  background-color: skyblue;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 500px;
+  border-radius: 10px;
+  padding: 5px;
+  padding-top: 2px!important;
+  padding-left: 100px;
+  padding-right: 100px;
+}
+#submit {
+  width: 100%;
+  padding: 16px 32px;
+  margin: 4px 2px;
+}
+.carousel-item__details--title a, .carousel-item__details--subtitle a {
+  text-decoration: none!important;
+  color: inherit;
+  :visited {
+    color: inherit;
+    text-decoration: none;
+  }
+}
+.carousel_item__details--title a:hover, .carousel_item__details--subtitle a:hover {
+  color: #099;
 }
